# FluxDash

./: .envrc  .gitignore  Cargo.toml  README.md
src/: commands.rs  const.rs  dispatch.rs  main.rs
src/commands/: daily.rs  event.rs  level.rs  ping.rs  user.rs  weekly.rs  wrong.rs
src/utils/: levels.rs
