[package]
name = "fluxdash"
version = "0.2.0"
edition = "2024"
authors = [ "JuxGD <@JuxGD>" ]
description = "Geometry Dash bot for Fluxer! (WIP, contributions appreciated!)"
homepage = "https://codeberg.org/JuxGD/FluxDash"
repository = "https://github.com/JuxGD/FluxDash"
license = "MIT"

[dependencies]
env_logger = "0.11.9"
log = "0.4.29"
fluxer-rs = "0.1.3"
gdutils = "0.2.2"
dotenvy = "0.15.7"
time-hms = "0.3.1"

[dependencies.tokio]
version = "1.51.0"
features = ["rt-multi-thread", "macros"]
